<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:id="@+id/sheriff_activity">

    <ScrollView
        android:id="@+id/profile_scrollview"
        android:layout_width="@dimen/scrollView_layout_width"
        android:layout_height="@dimen/scrollView_layout_height"
        android:layout_marginTop="@dimen/scrollView_layout_marginTop"
        android:layout_marginBottom="@dimen/scrollView_layout_marginBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/profile_scrollview_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/personal_name_header_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/nameHeadTextView_layout_marginStartLeft"
                    android:layout_marginLeft="@dimen/nameHeadTextView_layout_marginStartLeft"
                    android:layout_marginTop="@dimen/nameHeadTextView_layout_marginTop"
                    android:layout_marginEnd="@dimen/nameHeadTextView_layout_marginEndRight"
                    android:layout_marginRight="@dimen/nameHeadTextView_layout_marginEndRight"
                    android:contentDescription="@string/personal_name_textview_description"
                    android:text="@string/sheriff_profile_name"
                    android:textColor="@color/neon_green"
                    android:textSize="@dimen/nameHeadTextView_textSize"
                    app:fontFamily="@font/open_sans_condensed_bold"
                    app:layout_constraintEnd_toEndOf="@+id/sheriff_profile_imageview"
                    app:layout_constraintStart_toStartOf="@+id/sheriff_profile_imageview"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/position_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/position_layout_marginTop"
                    android:text="@string/positionText"
                    android:textSize="@dimen/position_textSize"
                    android:textStyle="italic"
                    app:fontFamily="@font/open_sans_bold_italic"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintBottom_toTopOf="@+id/sheriff_profile_imageview"
                    app:layout_constraintStart_toStartOf="@+id/personal_name_header_textview"
                    app:layout_constraintTop_toBottomOf="@+id/personal_name_header_textview" />



                <ImageView
                    android:id="@+id/sheriff_profile_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profileImageView_margin"
                    android:layout_marginLeft="@dimen/profileImageView_margin"
                    android:layout_marginTop="@dimen/profileImageView_margin"

                    android:layout_marginEnd="@dimen/profileImageView_margin"
                    android:layout_marginRight="@dimen/profileImageView_margin"
                    android:contentDescription="@string/image_view_profile_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/personal_name_header_textview"
                    app:srcCompat="@drawable/sheriff_profile_photo" />

                <TextView
                    android:id="@+id/profile_quote_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_textView_layout_marginStartLeft"
                    android:layout_marginLeft="@dimen/profile_textView_layout_marginStartLeft"
                    android:layout_marginTop="@dimen/profile_textView_layout_marginTop"
                    android:layout_marginEnd="@dimen/profile_textView_layout_marginEndRight"
                    android:layout_marginRight="@dimen/profile_textView_layout_marginEndRight"
                    android:contentDescription="@string/profile_quote_description"
                    android:text="@string/sheriff_profile_quoteText"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/profile_textView_textSize"
                    android:textStyle="italic"
                    app:fontFamily="@font/open_sans_bold_italic"
                    app:layout_constraintEnd_toEndOf="@+id/sheriff_profile_imageview"
                    app:layout_constraintStart_toStartOf="@+id/sheriff_profile_imageview"
                    app:layout_constraintTop_toBottomOf="@+id/sheriff_profile_imageview" />

                <TextView
                    android:id="@+id/profile_aboutyou_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_textView_layout_marginStartLeft"
                    android:layout_marginLeft="@dimen/profile_textView_layout_marginStartLeft"
                    android:layout_marginTop="@dimen/profile_textView_layout_marginTop"
                    android:layout_marginEnd="@dimen/profile_textView_layout_marginEndRight"
                    android:layout_marginRight="@dimen/profile_textView_layout_marginEndRight"
                    android:contentDescription="@string/profile_aboutyou_textview_description"
                    android:text="@string/sheriff_aboutMe_textview_description"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/profile_bioTextView_textSize"
                    app:fontFamily="@font/open_sans"
                    app:layout_constraintEnd_toEndOf="@+id/profile_quote_textview"
                    app:layout_constraintHorizontal_bias="0.75"
                    app:layout_constraintStart_toStartOf="@+id/profile_quote_textview"
                    app:layout_constraintTop_toBottomOf="@+id/profile_quote_textview" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>