<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <FrameLayout
        android:id="@+id/content_frame1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/black"
                android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />


            <TextView
                android:id="@+id/coding_heroes_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_headerTextView_layout_marginStartLeft"
                android:layout_marginLeft="@dimen/main_headerTextView_layout_marginStartLeft"
                android:layout_marginTop="@dimen/main_headerTextView_layout_marginTop"
                android:lineHeight="@dimen/main_headerText_lineSpace"
                android:paddingLeft="@dimen/main_headerTextView_paddingLeft"
                android:text="@string/coding_heroes_headerTxt"
                android:textColor="@color/neon_green"
                android:textSize="@dimen/main_headerTextSize"
                app:fontFamily="@font/open_sans_condensed_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <TextView
                android:id="@+id/aboutUsText_mainTextView"
                android:layout_width="@dimen/mainSummary_textView_layout_width"
                android:layout_height="@dimen/mainSummary_textView_layout_height"
                android:layout_marginStart="@dimen/mainSummary_textView_layout_marginStartLeft"
                android:layout_marginLeft="@dimen/mainSummary_textView_layout_marginStartLeft"
                android:layout_marginEnd="@dimen/mainSummary_textView_layout_marginEndRight"
                android:layout_marginRight="@dimen/mainSummary_textView_layout_marginEndRight"
                android:paddingStart="@dimen/main_headerTextView_paddingLeft"
                android:paddingLeft="@dimen/mainSummary_textView_layout_paddingLeft"
                android:text="@string/aboutUsText"
                android:textColor="@android:color/white"
                android:textSize="@dimen/mainSummary_textView_textSize"
                android:textStyle="bold"
                app:fontFamily="@font/open_sans"
                app:layout_constraintStart_toStartOf="@+id/coding_heroes_head"
                app:layout_constraintTop_toBottomOf="@+id/coding_heroes_head" />

            <ImageView
                android:id="@+id/main_groupPhoto_imageView"
                android:layout_width="393dp"
                android:layout_height="@dimen/mainGroupPhoto_layout_height"
                android:layout_marginEnd="@dimen/mainGroupPhoto_layout_marginEndRight"
                android:layout_marginRight="@dimen/mainGroupPhoto_layout_marginEndRight"
                android:contentDescription="@string/main_groupPhoto_imageview_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/group_photo_main" />

            <Button
                android:id="@+id/button_create_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:background="@color/white"
                android:text="@string/activity_main_button_create_notification"
                android:textColor="@color/black"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />
        </android.support.constraint.ConstraintLayout>


    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/navheader"
        app:menu="@menu/drawer_view" />


</android.support.v4.widget.DrawerLayout>